--- a/1-build-structure-of-page/1-descriptive-page-titles/start/index.html
+++ b/1-build-structure-of-page/1-descriptive-page-titles/start/index.html
@@ -6,7 +6,7 @@
 		<link rel="stylesheet" href="../../../assets/fonts/feather/feather.css">
 		<link rel="stylesheet" href="../../../assets/css/theme.css">
 		<link rel="stylesheet" href="../../../assets/css/site.css">
-		<title>Page title</title>
+		<title>Acme Fashion House</title>
 	</head>
 	<body>
 		<div class="navbar navbar-topbar navbar-expand-xl navbar-light bg-light">
